src/main/java/application/testData/invalidRandomAddresses/easy/RandomAddressesWithoutAField.java
package application.testData.invalidRandomAddresses.easy;

public class RandomAddressesWithoutAField {
}
